k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: chatgame
  labels:
    app.kubernetes.io/name: web-app
    app.kubernetes.io/part-of: chatgame
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-app
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      priorityClassName: high-priority
      containers:
        - name: web-app
          image: ghcr.io/hmbanan666/chatgame-web-app:nightly
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 60
          imagePullPolicy: Always
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            allowPrivilegeEscalation: false
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
  minReadySeconds: 20
  revisionHistoryLimit: 2
