k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
  namespace: chatgame
  labels:
    app.kubernetes.io/name: web-app
    app.kubernetes.io/part-of: chatgame
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/hsts: 'true'
    nginx.ingress.kubernetes.io/hsts-max-age: '31536000'
    nginx.ingress.kubernetes.io/hsts-include-subdomains: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chatgame.space
      secretName: tls-chatgame.space
  rules:
    - host: chatgame.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 3000
